codex-rs/tui/src/chatwidget/tests/snapshots/codex_tui__chatwidget__tests__questions_tests__freeform_question.snap
---
source: tui/src/chatwidget/tests/questions_tests.rs
expression: "render_bottom_popup(&chat, 80)"
---
• 已 排 队 的 后 续 输 入

  1 of 2

  Which way?

  Type your answer

  enter submit   ctrl + ] skip   ⌥ + ↓ main prompt   shift + ← next question
