codex-rs/tui/src/chatwidget/tests/snapshots/codex_tui__chatwidget__tests__questions_tests__question_queue_hint_Up.snap
---
source: tui/src/chatwidget/tests/questions_tests.rs
expression: "render_bottom_popup(&chat, 100)"
---
• 已 排 队 的 后 续 输 入
  ↳ queued

  1 of 4

  Which way?

  Type your answer

  enter submit   ctrl+] skip   ⌥+↓ main prompt   ⌥+↑ next question
