codex-rs/tui/src/chatwidget/tests/snapshots/codex_tui__chatwidget__tests__questions_tests__question_vim_single.snap
---
source: tui/src/chatwidget/tests/questions_tests.rs
expression: "format!(\"NORMAL\\n{normal}\\n\\nSEARCH\\n{search}\")"
---
NORMAL
• 已 排 队 的 后 续 输 入

  Which way?

  alpha beta
  alpha gamma
                                                                   Vim: Normal
  enter submit   ctrl+] skip   ⌥+↓ main prompt

SEARCH
• 已 排 队 的 后 续 输 入

  Which way?

  alpha beta
  alpha gamma
  /gamma
                                                                   Vim: Normal
  enter submit   ctrl+] skip   ⌥+↓ main prompt
