codex-rs/tui/src/chatwidget/tests/snapshots/codex_tui__chatwidget__tests__questions_tests__questions_with_status_and_queue.snap
---
source: tui/src/chatwidget/tests/questions_tests.rs
expression: "format!(\"OPEN\\n{open}\\n\\nONLY QUESTIONS\\n{completed}\")"
---
OPEN
• Working (0s • esc to interrupt)

• 已 排 队 的 后 续 输 入
  ↳ queued follow-up

ONLY QUESTIONS
• 已 排 队 的 后 续 输 入
  ? 2 questions
    shift + ← to answer
