codex-rs/tui/src/chatwidget/tests/snapshots/codex_tui__chatwidget__tests__questions_tests__queued_async_question_reply.snap
---
source: tui/src/chatwidget/tests/questions_tests.rs
expression: "render_bottom_popup(&chat, 80)"
---
• 已 排 队 的 后 续 输 入
  ↳ > Which way?

    !literal answer

  Any details?

  Type your answer

  enter submit   ctrl + ] skip   ⌥ + ↓ main prompt   shift + ← queued messages
